# side_navigation_bar_of_the_board

./: README.md
server/: .gitignore  main.py  pyproject.toml
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/dashboard/: header.tsx  layout.tsx
web/app/dashboard/[[...slug]]/: page-content.tsx  page.tsx
web/components/: app-sidebar-client.tsx  app-sidebar.tsx
web/components/ui/: sheet.tsx  sidebar.tsx  tooltip.tsx
web/hooks/: use-mobile.ts
web/lib/: navigation.ts  utils.ts
